--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,7 @@ h2::after {
 .back-to-top {
     position: fixed;
     bottom: 20px;
+    margin-bottom: 50px;
     right: 20px;
     width: 50px;
     height: 50px;
@@ -545,3 +546,4 @@ h2::after {
         background-color: rgba(255, 255, 255, 0.1) !important;
     }
 }
+
