--- a/css/style.css
+++ b/css/style.css
@@ -872,7 +872,7 @@ h2::after {
 /* =====================================================================
    PROFESSIONAL LOADING SCREEN
    ===================================================================== */
-
+/* 
 .loading-screen {
     position: fixed;
     top: 0;
@@ -1092,11 +1092,13 @@ h2::after {
     }
 }
 
-/* Preload logo image */
+/* Preload logo image 
 .loading-logo {
     image-rendering: -webkit-optimize-contrast;
     image-rendering: crisp-edges;
 }
+ */
+
 
 
 
