--- a/css/sponsor.css
+++ b/css/sponsor.css
@@ -2,7 +2,7 @@
 
 /* Header */
 .sponsor-header {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1579621970563-ebec7560ff3e?w=1200&auto=format&fit=crop') no-repeat center center;
+    background: rgb(13,110,253, 0.6), url('https://images.unsplash.com/photo-1579621970563-ebec7560ff3e?w=1200&auto=format&fit=crop') no-repeat center center;
     background-size: cover;
     padding: 6rem 0;
 }
